deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-teis
  namespace: apps
  labels:
    app: demo-teis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-teis
  template:
    metadata:
      labels:
        app: demo-teis
    spec:
      containers:
      - name: demo-teis
        image: registry.digitalocean.com/olsen/demo-teis:latest
        ports:
        - containerPort: 80
