service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-teis
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: demo-teis
    protocol: TCP
    port: 80
    targetPort: http-web-svc
